[package]
name = "tscc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Required for deriving Serialize/Deserialize traits
serde = { version = "1.0", features = ["derive"] }
# Used to simulate message transport over a channel (e.g., JSON string)
serde_json = "1.0"

[[bin]]
name = "tscc"
path = "main.rs"
